[workspace]
resolver = "2"
members = [
    "interning/",
    "expr/",
    "frontend/",
    "kernel/",
    "experiments/eval",
    "experiments/eval-ffi",
    "experiments/eval-examples",
]

default-members = ["kernel/"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
# Internal to MORK
eval = {path = "experiments/eval"}
eval-ffi = {path = "experiments/eval-ffi"}
mork-interning = {features = ["debug_api"], path = "./interning"}
mork-expr = {path = "./expr"}
mork-frontend = {path = "./frontend"}
mork = {path = "./kernel"}

# External to MORK
gxhash = {version="3.4.1", git="https://github.com/luketpeterson/gxhash/"} # for dag_serialization
log = { version = "0.4.27" }
env_logger = "0.11.8"
pathmap = { path = "../PathMap/", version = "0.3.0", features = ["jemalloc", "arena_compact", "nightly"] }
