[package]
name = "linalg"
version = "0.1.0"
edition = "2024"

[features]
default = ["dense", "csr", "blocked", "rayon"]
dense = []
csr = []
blocked = []
rayon = ["dep:rayon"]

[dependencies]
rayon = { version = "1", optional = true }

[dev-dependencies]
rand = "0.9"

[[bench]]
name = "perf"
harness = false
