[package]
name = "mork-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
typed-arena = "2.0.2"
regex = "1.10.4"

[build]
rustflags = "-C opt-level=3 -C target-cpu=native"

[dependencies.ringmap]
path = "../../RingMap"
#features = ["all_dense_nodes"]

[dependencies.mork-bytestring]
path = "../experiments/expr/bytestring"
