[package]
name = "mork-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
typed-arena = "2.0.2"
regex = "1.10.4"
memmap2 = "0.9.5"

[build]
rustflags = "-C opt-level=3 -C target-cpu=native"

[dependencies.pathmap]
path = "../../PathMap"
#features = ["all_dense_nodes"]
# features = []

[dependencies.mork-bytestring]
path = "../experiments/expr/bytestring"
