[package]
name = "mork"
version = "0.1.0"
edition = "2024"

[dependencies]
eval = { workspace=true }
eval-ffi = { workspace=true }
mork-frontend = { workspace=true }
mork-expr = { workspace=true }
mork-interning = { workspace = true }
pathmap = { workspace = true, features = ["nightly"] }
log = { workspace=true }
env_logger = { workspace=true }
memmap2 = "0.9.5"
#neo4rs = { version = "0.9.0-rc.5" , features = ["unstable-bolt-protocol-impl-v2"]}
#tokio = "1.43.0"
futures = "0.3.31"
neo4rs = { version = "0.9.0-rc.6", optional = true }
tokio = { version = "1.44.0", optional = true }
rand = "0.9.1"
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0.225", features = ["derive"] }
wasmtime = { version = "37.0.1", features = ["winch"], optional = true }
itertools = "0.14.0"
base64 = "0.22.1"
hex = "0.4.3"
subprocess = { version = "0.2.13" }

[features]
default = ["grounding", "specialize_io"]
neo4j = ["dep:neo4rs", "dep:tokio"]
interning = []
wasm = ["dep:wasmtime"]
z3 = []
no_search = []
grounding = []
specialize_io = []
periodic_merkleize = []
