[package]
name = "linalg"
version = "0.1.0"
edition = "2024"

[features]
default = ["dense", "csr", "blocked", "rayon"]
dense = []
csr = []
blocked = []
rayon = ["dep:rayon"]
# Use Intel MKL's Vector Math Library for the scalar tensor transforms
# (`linalg::scalar`). `intel-mkl-src` provisions and links MKL itself
# (downloading a redistributable build on first compile), so no manual setup
# is needed. Pinned to the LP64 interface so `MKL_INT` stays 32-bit, matching
# the FFI declarations in `scalar.rs`.
intel-mkl = ["dep:intel-mkl-src"]
jit = [
    "dense",
    "csr",
    "dep:cranelift-jit",
    "dep:cranelift-module",
    "dep:cranelift-frontend",
    "dep:cranelift-codegen",
    "dep:cranelift-native",
]
# BLAS baseline for the crossover bench (links the system OpenBLAS).
blas = ["dep:blas", "dep:blas-src", "dep:openblas-src"]

[dependencies]
rayon = { version = "1", optional = true }
blas = { version = "0.23", optional = true }
blas-src = { version = "0.14", features = ["openblas"], optional = true }
openblas-src = { version = "0.10", features = ["cblas", "system"], optional = true }
cranelift-jit = { version = "0.132", optional = true }
cranelift-module = { version = "0.132", optional = true }
cranelift-frontend = { version = "0.132", optional = true }
cranelift-codegen = { version = "0.132", optional = true }
cranelift-native = { version = "0.132", optional = true }
# Static config so `intel-mkl-src` downloads and links a self-contained MKL
# (ocipkg only auto-fetches for static link types); LP64 keeps MKL_INT 32-bit.
intel-mkl-src = { version = "0.8", optional = true, default-features = false, features = ["mkl-static-lp64-iomp"] }

[dev-dependencies]
rand = "0.9"
rayon = "1"

[[bench]]
name = "perf"
harness = false

[[bench]]
name = "graph"
harness = false

[[bench]]
name = "scalar"
harness = false

[[bench]]
name = "crossover"
harness = false
required-features = ["blas"]

[[example]]
name = "jit_bench"
required-features = ["jit"]
