[package]
name = "mork_server"
version = "0.1.0"
edition = "2021"

[dependencies]
pathmap = { workspace=true }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
urlencoding = "2.1.3"
reqwest = { version = "0.11", features = ["gzip", "deflate"] }
scc = { version = "2.3.0", optional = true }
num_cpus = { version = "1.16.0", optional = true }

[dev-dependencies]

[features]
default = ["tokio_workers"]
# default = ["mork_workers"] #GOAT, mork_workers is only half-implemented, and it probably doesn't make sense to go that way unless there is an issue with tokio
tokio_workers = [] # Use Tokio threads as the server workers
mork_workers = ["dep:num_cpus", "dep:scc"] # Use our own custom thread pool for CPU-heavy work

