[package]
name = "logic-query"
version = "0.1.0"
edition = "2021"

[build]
rustflags = "-C opt-level=3 -C target-cpu=native"


[dependencies.pathmap]
path = "../../../PathMap"
features = ["all_dense_nodes"]

[dependencies.mork-frontend]
path = "../../frontend"

[dependencies.mork-bytestring]
path = "../../experiments/expr/bytestring"
