[package]
name = "eval"
version = "0.1.0"
edition.workspace = true

[dependencies]
mork-expr = { path = "../../expr" }
eval-ffi = { path = "../eval-ffi", features = ["std"] }
eval-examples = { path = "../eval-examples" }
libloading = "0.9.0"
tracking-allocator = { version = "0.4.0", git = "https://github.com/tobz/tracking-allocator.git" }
